--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .video-bg{
+    position: absolute;top: 0;left: 0;z-index: -1;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  h1 {
+    color: #ffffff;text-align: center;margin: 30px 0;font-weight: 700;
+      text-shadow: 2px 2px #00000063;font-size: 70px;
+    
   }
-  to {
-    transform: rotate(360deg);
+  form {
+    max-width: 500px; margin: 0 auto;
+    background: white;
+    padding: 10px 20px;
+    margin-top: 50px;
+    border-radius: 5px;
+    box-shadow: 1px 2px 10px #ddd;
+    display: flex;justify-content: space-between;
   }
-}
+
+  form textarea {
+    width: 70%; padding: 10px 5px;
+    outline: none; font-size: 16px;
+    font-weight: 500;border-radius: 10px;;outline: none;
+  }
+  form button{
+   width: 20%; background-color: #008111af;outline: none;border: 1px solid rgb(230, 138, 138);
+   border-radius: 10px;font-size: 20px;text-transform: uppercase;
+  }
+
+
+  .todo_container {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .todo {
+    margin-top: 20px;
+    background: rgb(242, 242, 242);
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 1px 2px 10px #ddd;
+    
+  }
+  .todo textarea {
+    cursor: pointer;
+    width: 80%;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: transparent;
+    font-size: 20px;
+    font-weight: 300;
+    text-transform: capitalize;
+  }
+  .button-complete,
+  .button-delete,
+  .button-edit {
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: transparent;
+    border-radius: 50%;
+  }
+  #i {
+    font-size: 35px;
+  }
+  .button-complete {
+    color: #008111;
+    margin-right: 10px;
+  }
+  .button-edit {
+    color: #006086;
+    margin-right: 10px;
+  }
+  .button-delete {
+    color: rgb(249, 37, 0);
+  }
+  @media screen and (max-width: 667px) {
+    .task_container {
+      width: 90%;
+    }
+    .task {
+      margin-right: 0px;
+    }
+  }
+  input:focus,
+  button:focus {
+    outline: none;
+  }
